--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="header-list list">
             <li class="item">
-              <a class="header-item current link" href="./index.html">Studio</a>
+              <a class="header-item link current" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="header-item link" href="./portfolio.html">Portfolio</a>
