update index html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
             <li class="item">
               <a class="header-item link" href="./index.html">Studio</a>
             </li>
-            <li class="item current">
-              <a class="header-item link" href="./portfolio.html">Portfolio</a>
+            <li class="item">
+              <a class="header-item link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="item">
               <a class="header-item link" href="">Contacts</a>
