--- a/index.html
+++ b/index.html
@@ -298,14 +298,63 @@
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href=""><svg width="24" height="24" class="footer-soc-icon">
                   <use href="./images/icon.svg#icon-linkedin-1"></use></svg></a></li>
-          </ul> 
- </div>
-      </div>
+          </ul>
+        </div>
+        <div class="footer-sub-box">
+          <p class="title-lab">Subscribe</p>
+          <form class="footer-sub-form">
+            <label>Email
+              <input class="footer-input"
+              class="mobile_input"
+              type="email"
+              name="email"
+              placeholder="E-mail">
+            </label>
+            <div class="footer-sub-icon">
+              <button class="footer_buttom" type="sudmit">Subscribe</button>
+            <svg width="24" height="24" class="subscribe_icon">
+              <use href="./images/icon.svg#icon-Frame"></use></svg>
+            </div>
+          </form>
+        </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="close-icom" data-modal-close><svg width="24" height="24"><use href="./images/icon.svg#icon-close-1"></use></svg></button>
-    </div>
+      <button type="button" class="close-icom" data-modal-close><svg width="8" height="8"><use href="./images/icon.svg#icon-close-1"></use></svg></button>
+    <h4 class="mobile_title">Leave your contacts and we will call you back</h4>
+    <form class="mobile_form">
+      <label><span class="mobile_label_text">Name</span>
+        <div class="input_wrap">
+          <input 
+          class="mobile_input"
+          type="text">
+        <svg width="18" height="24" class="mobile_icon">
+          <use href="./images/icon.svg#icon-person-black"></use></svg>
+        </div>
+      </label>
+      <label><span class="mobile_label_text">Phone</span>
+        <div class="input_wrap">
+          <input type="text" class="mobile_input">
+          <svg width="18" height="24" class="mobile_icon">
+            <use href="./images/icon.svg#icon-phone-black"></use></svg>
+        </div>
+      </label>
+      <label><span class="mobile_label_text">Email</span>
+      <div class="input_wrap">
+        <input type="text" class="mobile_input">
+      <svg width="18" height="24" class="mobile_icon">
+        <use href="./images/icon.svg#icon-email-black"></use></svg>
+      </div>
+      </label>
+      <label><span class="mobile_label_text">Comment</span></label>
+        <textarea
+        class="mobile_input_comment"
+        id="user-comment"
+        name="user-comment"
+        placeholder="Text input"></textarea>
+      <button class="mobile_buttom" type="sudmit">Send</button>
+    </form>
+  </div>
   </div>
     <script src="./js/modal.js"></script>
   </body>
